<dev>:<add double y axis chart to the combination page>

--- a/src/components/Combination/CombinationReport.scss
+++ b/src/components/Combination/CombinationReport.scss
@@ -50,8 +50,8 @@
 
   .left {
     display: inline-block;
-    margin-right: 118px;
-    width: 339px;
+    margin-right: 30px;
+    width: 430px;
     vertical-align: middle;
   }
 
@@ -185,11 +185,12 @@
     display: inline-block;
     width: 500px;
     margin-right: 30px;
+    vertical-align: middle;
   }
 
   .table {
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
     width: 300px;
 
     table {
