--- a/src/components/Combination/CombinationReport.scss
+++ b/src/components/Combination/CombinationReport.scss
@@ -242,6 +242,7 @@
 .section_11, .section_12 {
   width: 100%;
   padding-top: 40px;
+  padding-left: 12px;
   text-align: left;
   font-size: 14px;
   color: $main-font-color;
