<dev>:<add risk warning at combination page>

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -16,3 +16,5 @@ $card-border-color: #979797;
 $card-background: rgba(255, 255, 255, 0.95);
 $background-color: #F9FAFB;
 $button-background: #8DC6FF;
+
+$warning-color: #fcdd4e;
