--- a/src/index.scss
+++ b/src/index.scss
@@ -61,6 +61,9 @@ html {
         //background-color: #edf3fa;
       }
     }
+    //.anticon {
+    //  color: $warning-color;
+    //}
 
     @media (max-width: 960px) {
       .container {
