--- a/src/components/Asset/AssetAllocation.less
+++ b/src/components/Asset/AssetAllocation.less
@@ -17,7 +17,8 @@
 
     }
     .ant-radio-button-wrapper {
-      margin: 0 150px;
+      vertical-align: top;
+      margin: 0 40px;
       text-align: center;
       width: 160px;
       height: 140px;
@@ -140,6 +141,7 @@
   //border-left-width: 2px;
   //padding-left: 4px;
   display: block;
+  margin-bottom: 10px;
   color: #9FAEC0;
   font-size: 12px;
 }
@@ -191,6 +193,7 @@
 .scroll_wrapper {
   height: 300px;
   border: 1px solid #E7E9EC;
+  overflow: scroll;
   :global {
     .FreeScrollbar {
       overflow: scroll !important;
@@ -201,6 +204,7 @@
 .scroll_wrapper_small {
   height: 100px;
   border: 1px solid #E7E9EC;
+  overflow: scroll;
   :global {
     .FreeScrollbar {
       overflow: scroll !important;
