<dev>:<update asset net>

--- a/src/components/Asset/AssetAllocation.less
+++ b/src/components/Asset/AssetAllocation.less
@@ -219,3 +219,12 @@
   //display: inline-block;
   //vertical-align: top;
 }
+
+.checkbox_group {
+  :global {
+    .ant-checkbox-group-item {
+      width: 200px;
+      height: 40px;
+    }
+  }
+}
